src/sphinxdocrs/tests/snapshots/parity__make_help_py_builders.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_builders
---
- changes
- clean
- coverage
- devhelp
- dirhtml
- doctest
- epub
- gettext
- html
- htmlhelp
- info
- json
- latex
- latexpdf
- latexpdfja
- linkcheck
- man
- pickle
- pseudoxml
- qthelp
- singlehtml
- texinfo
- text
- xml
