src/sphinxdocrs/tests/snapshots/parity__make_html_py_top_level_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_files
---
- ".buildinfo"
- _sources
- _static
- genindex.html
- guide.html
- index.html
- objects.inv
- search.html
- searchindex.js
