src/sphinxdocrs/tests/snapshots/parity__make_html_rs_stderr_normalised.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: normalised
---
- "sphinxdocrs: make mode: running SphinxApp (builder=html)"
- "Build succeeded: <N> file(s) written."
- "WARNING: guide: document isn't included in any toctree"
