src/sphinxdocrs/tests/snapshots/parity__make_html_rs_top_level_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: rs_files
---
- _static
- genindex.html
- guide.html
- index.html
- objects.inv
