src/sphinxdocrs/tests/snapshots/parity__quickstart_parity_python_tree.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_tree
---
- _build
- _static
- _templates
- conf.py
- index.rst
