src/sphinxdocrs/tests/snapshots/parity__sphinx_docs_parity_gap_missing_in_rust.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: missing
---
- ".doctrees/authors.doctree"
- ".doctrees/changes/0.1.doctree"
- ".doctrees/changes/0.2.doctree"
- ".doctrees/changes/0.3.doctree"
- ".doctrees/changes/0.4.doctree"
- ".doctrees/changes/0.5.doctree"
- ".doctrees/changes/0.6.doctree"
- ".doctrees/changes/1.0.doctree"
- ".doctrees/changes/1.1.doctree"
- ".doctrees/changes/1.2.doctree"
- ".doctrees/changes/1.3.doctree"
- ".doctrees/changes/1.4.doctree"
- ".doctrees/changes/1.5.doctree"
- ".doctrees/changes/1.6.doctree"
- ".doctrees/changes/1.7.doctree"
- ".doctrees/changes/1.8.doctree"
- ".doctrees/changes/2.0.doctree"
- ".doctrees/changes/2.1.doctree"
- ".doctrees/changes/2.2.doctree"
- ".doctrees/changes/2.3.doctree"
- ".doctrees/changes/2.4.doctree"
- ".doctrees/changes/3.0.doctree"
- ".doctrees/changes/3.1.doctree"
- ".doctrees/changes/3.2.doctree"
- ".doctrees/changes/3.3.doctree"
- ".doctrees/changes/3.4.doctree"
- ".doctrees/changes/3.5.doctree"
- ".doctrees/changes/4.0.doctree"
- ".doctrees/changes/4.1.doctree"
- ".doctrees/changes/4.2.doctree"
- ".doctrees/changes/4.3.doctree"
- ".doctrees/changes/4.4.doctree"
- ".doctrees/changes/4.5.doctree"
- ".doctrees/changes/5.0.doctree"
- ".doctrees/changes/5.1.doctree"
- ".doctrees/changes/5.2.doctree"
- ".doctrees/changes/5.3.doctree"
- ".doctrees/changes/6.0.doctree"
- ".doctrees/changes/6.1.doctree"
- ".doctrees/changes/6.2.doctree"
- ".doctrees/changes/7.0.doctree"
- ".doctrees/changes/7.1.doctree"
- ".doctrees/changes/7.2.doctree"
- ".doctrees/changes/7.3.doctree"
- ".doctrees/changes/7.4.doctree"
- ".doctrees/changes/8.0.doctree"
- ".doctrees/changes/8.1.doctree"
- ".doctrees/changes/8.2.doctree"
- ".doctrees/changes/9.0.doctree"
- ".doctrees/changes/index.doctree"
- ".doctrees/development/howtos/builders.doctree"
- ".doctrees/development/howtos/index.doctree"
- ".doctrees/development/howtos/setup_extension.doctree"
- ".doctrees/development/html_themes/index.doctree"
- ".doctrees/development/html_themes/templating.doctree"
- ".doctrees/development/index.doctree"
- ".doctrees/development/tutorials/adding_domain.doctree"
- ".doctrees/development/tutorials/autodoc_ext.doctree"
- ".doctrees/development/tutorials/examples/README.doctree"
- ".doctrees/development/tutorials/extending_build.doctree"
- ".doctrees/development/tutorials/extending_syntax.doctree"
- ".doctrees/development/tutorials/index.doctree"
- ".doctrees/environment.pickle"
- ".doctrees/examples.doctree"
- ".doctrees/extdev/appapi.doctree"
- ".doctrees/extdev/builderapi.doctree"
- ".doctrees/extdev/collectorapi.doctree"
- ".doctrees/extdev/deprecated.doctree"
- ".doctrees/extdev/domainapi.doctree"
- ".doctrees/extdev/envapi.doctree"
- ".doctrees/extdev/event_callbacks.doctree"
- ".doctrees/extdev/eventapi.doctree"
- ".doctrees/extdev/i18n.doctree"
- ".doctrees/extdev/index.doctree"
- ".doctrees/extdev/logging.doctree"
- ".doctrees/extdev/markupapi.doctree"
- ".doctrees/extdev/nodes.doctree"
- ".doctrees/extdev/parserapi.doctree"
- ".doctrees/extdev/projectapi.doctree"
- ".doctrees/extdev/testing.doctree"
- ".doctrees/extdev/utils.doctree"
- ".doctrees/faq.doctree"
- ".doctrees/glossary.doctree"
- ".doctrees/index.doctree"
- ".doctrees/internals/ai-policy.doctree"
- ".doctrees/internals/code-of-conduct.doctree"
- ".doctrees/internals/contributing.doctree"
- ".doctrees/internals/index.doctree"
- ".doctrees/internals/organization.doctree"
- ".doctrees/internals/release-process.doctree"
- ".doctrees/latex.doctree"
- ".doctrees/man/index.doctree"
- ".doctrees/man/sphinx-apidoc.doctree"
- ".doctrees/man/sphinx-autogen.doctree"
- ".doctrees/man/sphinx-build.doctree"
- ".doctrees/man/sphinx-quickstart.doctree"
- ".doctrees/support.doctree"
- ".doctrees/tutorial/automatic-doc-generation.doctree"
- ".doctrees/tutorial/deploying.doctree"
- ".doctrees/tutorial/describing-code.doctree"
- ".doctrees/tutorial/end.doctree"
- ".doctrees/tutorial/first-steps.doctree"
- ".doctrees/tutorial/getting-started.doctree"
- ".doctrees/tutorial/index.doctree"
- ".doctrees/tutorial/more-sphinx-customization.doctree"
- ".doctrees/tutorial/narrative-documentation.doctree"
- ".doctrees/usage/advanced/intl.doctree"
- ".doctrees/usage/advanced/websupport/api.doctree"
- ".doctrees/usage/advanced/websupport/index.doctree"
- ".doctrees/usage/advanced/websupport/quickstart.doctree"
- ".doctrees/usage/advanced/websupport/searchadapters.doctree"
- ".doctrees/usage/advanced/websupport/storagebackends.doctree"
- ".doctrees/usage/builders/index.doctree"
- ".doctrees/usage/configuration.doctree"
- ".doctrees/usage/domains/c.doctree"
- ".doctrees/usage/domains/cpp.doctree"
- ".doctrees/usage/domains/index.doctree"
- ".doctrees/usage/domains/javascript.doctree"
- ".doctrees/usage/domains/mathematics.doctree"
- ".doctrees/usage/domains/python.doctree"
- ".doctrees/usage/domains/restructuredtext.doctree"
- ".doctrees/usage/domains/standard.doctree"
- ".doctrees/usage/extensions/apidoc.doctree"
- ".doctrees/usage/extensions/autodoc.doctree"
- ".doctrees/usage/extensions/autosectionlabel.doctree"
- ".doctrees/usage/extensions/autosummary.doctree"
- ".doctrees/usage/extensions/coverage.doctree"
- ".doctrees/usage/extensions/doctest.doctree"
- ".doctrees/usage/extensions/duration.doctree"
- ".doctrees/usage/extensions/example_google.doctree"
- ".doctrees/usage/extensions/example_numpy.doctree"
- ".doctrees/usage/extensions/extlinks.doctree"
- ".doctrees/usage/extensions/githubpages.doctree"
- ".doctrees/usage/extensions/graphviz.doctree"
- ".doctrees/usage/extensions/ifconfig.doctree"
- ".doctrees/usage/extensions/imgconverter.doctree"
- ".doctrees/usage/extensions/index.doctree"
- ".doctrees/usage/extensions/inheritance.doctree"
- ".doctrees/usage/extensions/intersphinx.doctree"
- ".doctrees/usage/extensions/linkcode.doctree"
- ".doctrees/usage/extensions/math.doctree"
- ".doctrees/usage/extensions/napoleon.doctree"
- ".doctrees/usage/extensions/todo.doctree"
- ".doctrees/usage/extensions/viewcode.doctree"
- ".doctrees/usage/index.doctree"
- ".doctrees/usage/installation.doctree"
- ".doctrees/usage/markdown.doctree"
- ".doctrees/usage/quickstart.doctree"
- ".doctrees/usage/referencing.doctree"
- ".doctrees/usage/restructuredtext/basics.doctree"
- ".doctrees/usage/restructuredtext/directives.doctree"
- ".doctrees/usage/restructuredtext/domains.doctree"
- ".doctrees/usage/restructuredtext/field-lists.doctree"
- ".doctrees/usage/restructuredtext/index.doctree"
- ".doctrees/usage/restructuredtext/roles.doctree"
- ".doctrees/usage/theming.doctree"
- _downloads/1db87291c47cdf2a82cc635794bf6c44/example_google.py
- _downloads/78d4fe3529118e4daa37f326d15384f4/message.pot.jinja
- _downloads/f3a25b842d7256a8ce8f8cb6cc6160a9/example_numpy.py
- _images/agogo.png
- _images/alabaster.png
- _images/bizstyle.png
- _images/classic.png
- _images/graphviz-339e3ad43e173f7c950f79bf4d41f82f906d2175.png
- _images/graphviz-339e3ad43e173f7c950f79bf4d41f82f906d2175.png.map
- _images/graphviz-8f41e3505b1f58d16c8c77a9ed7d9562fac30e74.png
- _images/graphviz-8f41e3505b1f58d16c8c77a9ed7d9562fac30e74.png.map
- _images/graphviz-e87ab1666a7685a706a5bed2a7744d43bb33cbd4.png
- _images/graphviz-e87ab1666a7685a706a5bed2a7744d43bb33cbd4.png.map
- _images/haiku.png
- _images/inheritance-a014b3e35c601d0641890df126db27c181074aed.png
- _images/inheritance-a014b3e35c601d0641890df126db27c181074aed.png.map
- _images/inheritance-da890d2a33b99fdbbfa01edd1c3f81440120ec53.png
- _images/inheritance-da890d2a33b99fdbbfa01edd1c3f81440120ec53.png.map
- _images/inheritance-db919451f4f8492c66ccf0e8784241ad72311b89.png
- _images/inheritance-db919451f4f8492c66ccf0e8784241ad72311b89.png.map
- _images/jupyter-logo.png
- _images/linux-logo.png
- _images/lumache-autosummary.png
- _images/lumache-first-light.png
- _images/lumache-furo.png
- _images/lumache-py-function-full.png
- _images/lumache-py-function.png
- _images/nature.png
- _images/pyramid.png
- _images/python-logo.png
- _images/scrolls.png
- _images/sphinxdoc.png
- _images/traditional.png
- _images/translation.svg
- _modules/docutils/parsers/rst.html
- _modules/index.html
- _modules/sphinx/addnodes.html
- _modules/sphinx/application.html
- _modules/sphinx/builders.html
- _modules/sphinx/builders/changes.html
- _modules/sphinx/builders/dirhtml.html
- _modules/sphinx/builders/dummy.html
- _modules/sphinx/builders/epub3.html
- _modules/sphinx/builders/gettext.html
- _modules/sphinx/builders/html.html
- _modules/sphinx/builders/latex.html
- _modules/sphinx/builders/linkcheck.html
- _modules/sphinx/builders/manpage.html
- _modules/sphinx/builders/singlehtml.html
- _modules/sphinx/builders/texinfo.html
- _modules/sphinx/builders/text.html
- _modules/sphinx/builders/xml.html
- _modules/sphinx/config.html
- _modules/sphinx/directives.html
- _modules/sphinx/domains.html
- _modules/sphinx/domains/_index.html
- _modules/sphinx/domains/python.html
- _modules/sphinx/environment.html
- _modules/sphinx/environment/collectors.html
- _modules/sphinx/errors.html
- _modules/sphinx/events.html
- _modules/sphinx/ext/autodoc/_event_listeners.html
- _modules/sphinx/ext/coverage.html
- _modules/sphinx/ext/linkcode.html
- _modules/sphinx/locale.html
- _modules/sphinx/parsers.html
- _modules/sphinx/project.html
- _modules/sphinx/transforms.html
- _modules/sphinx/transforms/post_transforms.html
- _modules/sphinx/transforms/post_transforms/images.html
- _modules/sphinx/util/docutils.html
- _modules/sphinx/util/logging.html
- _modules/sphinx/util/parsing.html
- _modules/sphinx/util/typing.html
- _modules/sphinxcontrib/applehelp.html
- _modules/sphinxcontrib/devhelp.html
- _modules/sphinxcontrib/htmlhelp.html
- _modules/sphinxcontrib/qthelp.html
- _modules/sphinxcontrib/serializinghtml.html
- _modules/sphinxcontrib/websupport/core.html
- _modules/sphinxcontrib/websupport/search.html
- _modules/sphinxcontrib/websupport/storage.html
- _static/base-stemmer.js
- _static/basic.css
- _static/doctools.js
- _static/documentation_options.js
- _static/english-stemmer.js
- _static/file.png
- _static/graphviz.css
- _static/language_data.js
- _static/minus.png
- _static/opensearch.xml
- _static/plus.png
- _static/pygments.css
- _static/searchtools.js
- _static/sphinx-logo.svg
- _static/sphinx13.css
- _static/sphinx_highlight.js
- changes.html
- contents.html
- development/builders.html
- development/overview.html
- development/templating.html
- development/theming.html
- development/tutorials/helloworld.html
- development/tutorials/recipe.html
- development/tutorials/todo.html
- py-modindex.html
