src/sphinxdocrs/tests/snapshots/parity__sphinx_docs_parity_gap_rust_only.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: rs_only
---
- ".doctrees/environment.json"
- _static/sphinxdocrs.css
