src/sphinxdocrs/tests/snapshots/parity__sphinx_docs_py_intersphinx_cache_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_sorted
---
- python_objects.inv
- readthedocs_objects.inv
- requests_objects.inv
