src/sphinxdocrs/tests/snapshots/parity__sphinx_docs_rs_full_tree.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: paths
---
- ".buildinfo"
- ".doctrees/__intersphinx_cache__/python_objects.inv"
- ".doctrees/__intersphinx_cache__/readthedocs_objects.inv"
- ".doctrees/__intersphinx_cache__/requests_objects.inv"
- ".doctrees/authors.doctree"
- ".doctrees/changes/0.1.doctree"
- ".doctrees/changes/0.2.doctree"
- ".doctrees/changes/0.3.doctree"
- ".doctrees/changes/0.4.doctree"
- ".doctrees/changes/0.5.doctree"
- ".doctrees/changes/0.6.doctree"
- ".doctrees/changes/1.0.doctree"
- ".doctrees/changes/1.1.doctree"
- ".doctrees/changes/1.2.doctree"
- ".doctrees/changes/1.3.doctree"
- ".doctrees/changes/1.4.doctree"
- ".doctrees/changes/1.5.doctree"
- ".doctrees/changes/1.6.doctree"
- ".doctrees/changes/1.7.doctree"
- ".doctrees/changes/1.8.doctree"
- ".doctrees/changes/2.0.doctree"
- ".doctrees/changes/2.1.doctree"
- ".doctrees/changes/2.2.doctree"
- ".doctrees/changes/2.3.doctree"
- ".doctrees/changes/2.4.doctree"
- ".doctrees/changes/3.0.doctree"
- ".doctrees/changes/3.1.doctree"
- ".doctrees/changes/3.2.doctree"
- ".doctrees/changes/3.3.doctree"
- ".doctrees/changes/3.4.doctree"
- ".doctrees/changes/3.5.doctree"
- ".doctrees/changes/4.0.doctree"
- ".doctrees/changes/4.1.doctree"
- ".doctrees/changes/4.2.doctree"
- ".doctrees/changes/4.3.doctree"
- ".doctrees/changes/4.4.doctree"
- ".doctrees/changes/4.5.doctree"
- ".doctrees/changes/5.0.doctree"
- ".doctrees/changes/5.1.doctree"
- ".doctrees/changes/5.2.doctree"
- ".doctrees/changes/5.3.doctree"
- ".doctrees/changes/6.0.doctree"
- ".doctrees/changes/6.1.doctree"
- ".doctrees/changes/6.2.doctree"
- ".doctrees/changes/7.0.doctree"
- ".doctrees/changes/7.1.doctree"
- ".doctrees/changes/7.2.doctree"
- ".doctrees/changes/7.3.doctree"
- ".doctrees/changes/7.4.doctree"
- ".doctrees/changes/8.0.doctree"
- ".doctrees/changes/8.1.doctree"
- ".doctrees/changes/8.2.doctree"
- ".doctrees/changes/9.0.doctree"
- ".doctrees/changes/index.doctree"
- ".doctrees/development/howtos/builders.doctree"
- ".doctrees/development/howtos/index.doctree"
- ".doctrees/development/howtos/setup_extension.doctree"
- ".doctrees/development/html_themes/index.doctree"
- ".doctrees/development/html_themes/templating.doctree"
- ".doctrees/development/index.doctree"
- ".doctrees/development/tutorials/adding_domain.doctree"
- ".doctrees/development/tutorials/autodoc_ext.doctree"
- ".doctrees/development/tutorials/examples/README.doctree"
- ".doctrees/development/tutorials/extending_build.doctree"
- ".doctrees/development/tutorials/extending_syntax.doctree"
- ".doctrees/development/tutorials/index.doctree"
- ".doctrees/environment.json"
- ".doctrees/examples.doctree"
- ".doctrees/extdev/appapi.doctree"
- ".doctrees/extdev/builderapi.doctree"
- ".doctrees/extdev/collectorapi.doctree"
- ".doctrees/extdev/deprecated.doctree"
- ".doctrees/extdev/domainapi.doctree"
- ".doctrees/extdev/envapi.doctree"
- ".doctrees/extdev/event_callbacks.doctree"
- ".doctrees/extdev/eventapi.doctree"
- ".doctrees/extdev/i18n.doctree"
- ".doctrees/extdev/index.doctree"
- ".doctrees/extdev/logging.doctree"
- ".doctrees/extdev/markupapi.doctree"
- ".doctrees/extdev/nodes.doctree"
- ".doctrees/extdev/parserapi.doctree"
- ".doctrees/extdev/projectapi.doctree"
- ".doctrees/extdev/testing.doctree"
- ".doctrees/extdev/utils.doctree"
- ".doctrees/faq.doctree"
- ".doctrees/glossary.doctree"
- ".doctrees/index.doctree"
- ".doctrees/internals/ai-policy.doctree"
- ".doctrees/internals/code-of-conduct.doctree"
- ".doctrees/internals/contributing.doctree"
- ".doctrees/internals/index.doctree"
- ".doctrees/internals/organization.doctree"
- ".doctrees/internals/release-process.doctree"
- ".doctrees/latex.doctree"
- ".doctrees/man/index.doctree"
- ".doctrees/man/sphinx-apidoc.doctree"
- ".doctrees/man/sphinx-autogen.doctree"
- ".doctrees/man/sphinx-build.doctree"
- ".doctrees/man/sphinx-quickstart.doctree"
- ".doctrees/support.doctree"
- ".doctrees/tutorial/automatic-doc-generation.doctree"
- ".doctrees/tutorial/deploying.doctree"
- ".doctrees/tutorial/describing-code.doctree"
- ".doctrees/tutorial/end.doctree"
- ".doctrees/tutorial/first-steps.doctree"
- ".doctrees/tutorial/getting-started.doctree"
- ".doctrees/tutorial/index.doctree"
- ".doctrees/tutorial/more-sphinx-customization.doctree"
- ".doctrees/tutorial/narrative-documentation.doctree"
- ".doctrees/usage/advanced/intl.doctree"
- ".doctrees/usage/advanced/websupport/api.doctree"
- ".doctrees/usage/advanced/websupport/index.doctree"
- ".doctrees/usage/advanced/websupport/quickstart.doctree"
- ".doctrees/usage/advanced/websupport/searchadapters.doctree"
- ".doctrees/usage/advanced/websupport/storagebackends.doctree"
- ".doctrees/usage/builders/index.doctree"
- ".doctrees/usage/configuration.doctree"
- ".doctrees/usage/domains/c.doctree"
- ".doctrees/usage/domains/cpp.doctree"
- ".doctrees/usage/domains/index.doctree"
- ".doctrees/usage/domains/javascript.doctree"
- ".doctrees/usage/domains/mathematics.doctree"
- ".doctrees/usage/domains/python.doctree"
- ".doctrees/usage/domains/restructuredtext.doctree"
- ".doctrees/usage/domains/standard.doctree"
- ".doctrees/usage/extensions/apidoc.doctree"
- ".doctrees/usage/extensions/autodoc.doctree"
- ".doctrees/usage/extensions/autosectionlabel.doctree"
- ".doctrees/usage/extensions/autosummary.doctree"
- ".doctrees/usage/extensions/coverage.doctree"
- ".doctrees/usage/extensions/doctest.doctree"
- ".doctrees/usage/extensions/duration.doctree"
- ".doctrees/usage/extensions/example_google.doctree"
- ".doctrees/usage/extensions/example_numpy.doctree"
- ".doctrees/usage/extensions/extlinks.doctree"
- ".doctrees/usage/extensions/githubpages.doctree"
- ".doctrees/usage/extensions/graphviz.doctree"
- ".doctrees/usage/extensions/ifconfig.doctree"
- ".doctrees/usage/extensions/imgconverter.doctree"
- ".doctrees/usage/extensions/index.doctree"
- ".doctrees/usage/extensions/inheritance.doctree"
- ".doctrees/usage/extensions/intersphinx.doctree"
- ".doctrees/usage/extensions/linkcode.doctree"
- ".doctrees/usage/extensions/math.doctree"
- ".doctrees/usage/extensions/napoleon.doctree"
- ".doctrees/usage/extensions/todo.doctree"
- ".doctrees/usage/extensions/viewcode.doctree"
- ".doctrees/usage/index.doctree"
- ".doctrees/usage/installation.doctree"
- ".doctrees/usage/markdown.doctree"
- ".doctrees/usage/quickstart.doctree"
- ".doctrees/usage/referencing.doctree"
- ".doctrees/usage/restructuredtext/basics.doctree"
- ".doctrees/usage/restructuredtext/directives.doctree"
- ".doctrees/usage/restructuredtext/domains.doctree"
- ".doctrees/usage/restructuredtext/field-lists.doctree"
- ".doctrees/usage/restructuredtext/index.doctree"
- ".doctrees/usage/restructuredtext/roles.doctree"
- ".doctrees/usage/theming.doctree"
- _sources/authors.rst.txt
- _sources/changes/0.1.rst.txt
- _sources/changes/0.2.rst.txt
- _sources/changes/0.3.rst.txt
- _sources/changes/0.4.rst.txt
- _sources/changes/0.5.rst.txt
- _sources/changes/0.6.rst.txt
- _sources/changes/1.0.rst.txt
- _sources/changes/1.1.rst.txt
- _sources/changes/1.2.rst.txt
- _sources/changes/1.3.rst.txt
- _sources/changes/1.4.rst.txt
- _sources/changes/1.5.rst.txt
- _sources/changes/1.6.rst.txt
- _sources/changes/1.7.rst.txt
- _sources/changes/1.8.rst.txt
- _sources/changes/2.0.rst.txt
- _sources/changes/2.1.rst.txt
- _sources/changes/2.2.rst.txt
- _sources/changes/2.3.rst.txt
- _sources/changes/2.4.rst.txt
- _sources/changes/3.0.rst.txt
- _sources/changes/3.1.rst.txt
- _sources/changes/3.2.rst.txt
- _sources/changes/3.3.rst.txt
- _sources/changes/3.4.rst.txt
- _sources/changes/3.5.rst.txt
- _sources/changes/4.0.rst.txt
- _sources/changes/4.1.rst.txt
- _sources/changes/4.2.rst.txt
- _sources/changes/4.3.rst.txt
- _sources/changes/4.4.rst.txt
- _sources/changes/4.5.rst.txt
- _sources/changes/5.0.rst.txt
- _sources/changes/5.1.rst.txt
- _sources/changes/5.2.rst.txt
- _sources/changes/5.3.rst.txt
- _sources/changes/6.0.rst.txt
- _sources/changes/6.1.rst.txt
- _sources/changes/6.2.rst.txt
- _sources/changes/7.0.rst.txt
- _sources/changes/7.1.rst.txt
- _sources/changes/7.2.rst.txt
- _sources/changes/7.3.rst.txt
- _sources/changes/7.4.rst.txt
- _sources/changes/8.0.rst.txt
- _sources/changes/8.1.rst.txt
- _sources/changes/8.2.rst.txt
- _sources/changes/9.0.rst.txt
- _sources/changes/index.rst.txt
- _sources/development/howtos/builders.rst.txt
- _sources/development/howtos/index.rst.txt
- _sources/development/howtos/setup_extension.rst.txt
- _sources/development/html_themes/index.rst.txt
- _sources/development/html_themes/templating.rst.txt
- _sources/development/index.rst.txt
- _sources/development/tutorials/adding_domain.rst.txt
- _sources/development/tutorials/autodoc_ext.rst.txt
- _sources/development/tutorials/examples/README.rst.txt
- _sources/development/tutorials/extending_build.rst.txt
- _sources/development/tutorials/extending_syntax.rst.txt
- _sources/development/tutorials/index.rst.txt
- _sources/examples.rst.txt
- _sources/extdev/appapi.rst.txt
- _sources/extdev/builderapi.rst.txt
- _sources/extdev/collectorapi.rst.txt
- _sources/extdev/deprecated.rst.txt
- _sources/extdev/domainapi.rst.txt
- _sources/extdev/envapi.rst.txt
- _sources/extdev/event_callbacks.rst.txt
- _sources/extdev/eventapi.rst.txt
- _sources/extdev/i18n.rst.txt
- _sources/extdev/index.rst.txt
- _sources/extdev/logging.rst.txt
- _sources/extdev/markupapi.rst.txt
- _sources/extdev/nodes.rst.txt
- _sources/extdev/parserapi.rst.txt
- _sources/extdev/projectapi.rst.txt
- _sources/extdev/testing.rst.txt
- _sources/extdev/utils.rst.txt
- _sources/faq.rst.txt
- _sources/glossary.rst.txt
- _sources/index.rst.txt
- _sources/internals/ai-policy.rst.txt
- _sources/internals/code-of-conduct.rst.txt
- _sources/internals/contributing.rst.txt
- _sources/internals/index.rst.txt
- _sources/internals/organization.rst.txt
- _sources/internals/release-process.rst.txt
- _sources/latex.rst.txt
- _sources/man/index.rst.txt
- _sources/man/sphinx-apidoc.rst.txt
- _sources/man/sphinx-autogen.rst.txt
- _sources/man/sphinx-build.rst.txt
- _sources/man/sphinx-quickstart.rst.txt
- _sources/support.rst.txt
- _sources/tutorial/automatic-doc-generation.rst.txt
- _sources/tutorial/deploying.rst.txt
- _sources/tutorial/describing-code.rst.txt
- _sources/tutorial/end.rst.txt
- _sources/tutorial/first-steps.rst.txt
- _sources/tutorial/getting-started.rst.txt
- _sources/tutorial/index.rst.txt
- _sources/tutorial/more-sphinx-customization.rst.txt
- _sources/tutorial/narrative-documentation.rst.txt
- _sources/usage/advanced/intl.rst.txt
- _sources/usage/advanced/websupport/api.rst.txt
- _sources/usage/advanced/websupport/index.rst.txt
- _sources/usage/advanced/websupport/quickstart.rst.txt
- _sources/usage/advanced/websupport/searchadapters.rst.txt
- _sources/usage/advanced/websupport/storagebackends.rst.txt
- _sources/usage/builders/index.rst.txt
- _sources/usage/configuration.rst.txt
- _sources/usage/domains/c.rst.txt
- _sources/usage/domains/cpp.rst.txt
- _sources/usage/domains/index.rst.txt
- _sources/usage/domains/javascript.rst.txt
- _sources/usage/domains/mathematics.rst.txt
- _sources/usage/domains/python.rst.txt
- _sources/usage/domains/restructuredtext.rst.txt
- _sources/usage/domains/standard.rst.txt
- _sources/usage/extensions/apidoc.rst.txt
- _sources/usage/extensions/autodoc.rst.txt
- _sources/usage/extensions/autosectionlabel.rst.txt
- _sources/usage/extensions/autosummary.rst.txt
- _sources/usage/extensions/coverage.rst.txt
- _sources/usage/extensions/doctest.rst.txt
- _sources/usage/extensions/duration.rst.txt
- _sources/usage/extensions/example_google.rst.txt
- _sources/usage/extensions/example_numpy.rst.txt
- _sources/usage/extensions/extlinks.rst.txt
- _sources/usage/extensions/githubpages.rst.txt
- _sources/usage/extensions/graphviz.rst.txt
- _sources/usage/extensions/ifconfig.rst.txt
- _sources/usage/extensions/imgconverter.rst.txt
- _sources/usage/extensions/index.rst.txt
- _sources/usage/extensions/inheritance.rst.txt
- _sources/usage/extensions/intersphinx.rst.txt
- _sources/usage/extensions/linkcode.rst.txt
- _sources/usage/extensions/math.rst.txt
- _sources/usage/extensions/napoleon.rst.txt
- _sources/usage/extensions/todo.rst.txt
- _sources/usage/extensions/viewcode.rst.txt
- _sources/usage/index.rst.txt
- _sources/usage/installation.rst.txt
- _sources/usage/markdown.rst.txt
- _sources/usage/quickstart.rst.txt
- _sources/usage/referencing.rst.txt
- _sources/usage/restructuredtext/basics.rst.txt
- _sources/usage/restructuredtext/directives.rst.txt
- _sources/usage/restructuredtext/domains.rst.txt
- _sources/usage/restructuredtext/field-lists.rst.txt
- _sources/usage/restructuredtext/index.rst.txt
- _sources/usage/restructuredtext/roles.rst.txt
- _sources/usage/theming.rst.txt
- _static/Makefile
- _static/base-stemmer.js
- _static/basic.css
- _static/bookcover.png
- _static/diagrams/sphinx_build_flow.dot
- _static/diagrams/sphinx_build_phases.dot
- _static/diagrams/sphinx_core_events_flow.dot
- _static/doctools.js
- _static/documentation_options.js
- _static/english-stemmer.js
- _static/favicon.svg
- _static/file.png
- _static/jupyter-logo.png
- _static/language_data.js
- _static/linux-logo.png
- _static/minus.png
- _static/plus.png
- _static/pygments.css
- _static/python-logo.png
- _static/searchtools.js
- _static/sphinx-logo.svg
- _static/sphinx.png
- _static/sphinx13.css
- _static/sphinx_highlight.js
- _static/themes/agogo.png
- _static/themes/alabaster.png
- _static/themes/bizstyle.png
- _static/themes/classic.png
- _static/themes/fullsize/agogo.png
- _static/themes/fullsize/alabaster.png
- _static/themes/fullsize/bizstyle.png
- _static/themes/fullsize/classic.png
- _static/themes/fullsize/haiku.png
- _static/themes/fullsize/nature.png
- _static/themes/fullsize/pyramid.png
- _static/themes/fullsize/scrolls.png
- _static/themes/fullsize/sphinx_rtd_theme.png
- _static/themes/fullsize/sphinxdoc.png
- _static/themes/fullsize/traditional.png
- _static/themes/haiku.png
- _static/themes/nature.png
- _static/themes/pyramid.png
- _static/themes/scrolls.png
- _static/themes/sphinx_rtd_theme.png
- _static/themes/sphinxdoc.png
- _static/themes/traditional.png
- _static/translation.png
- _static/translation.puml
- _static/translation.svg
- _static/tutorial/lumache-autosummary.png
- _static/tutorial/lumache-first-light.png
- _static/tutorial/lumache-furo.png
- _static/tutorial/lumache-py-function-full.png
- _static/tutorial/lumache-py-function.png
- authors.html
- changes/0.1.html
- changes/0.2.html
- changes/0.3.html
- changes/0.4.html
- changes/0.5.html
- changes/0.6.html
- changes/1.0.html
- changes/1.1.html
- changes/1.2.html
- changes/1.3.html
- changes/1.4.html
- changes/1.5.html
- changes/1.6.html
- changes/1.7.html
- changes/1.8.html
- changes/2.0.html
- changes/2.1.html
- changes/2.2.html
- changes/2.3.html
- changes/2.4.html
- changes/3.0.html
- changes/3.1.html
- changes/3.2.html
- changes/3.3.html
- changes/3.4.html
- changes/3.5.html
- changes/4.0.html
- changes/4.1.html
- changes/4.2.html
- changes/4.3.html
- changes/4.4.html
- changes/4.5.html
- changes/5.0.html
- changes/5.1.html
- changes/5.2.html
- changes/5.3.html
- changes/6.0.html
- changes/6.1.html
- changes/6.2.html
- changes/7.0.html
- changes/7.1.html
- changes/7.2.html
- changes/7.3.html
- changes/7.4.html
- changes/8.0.html
- changes/8.1.html
- changes/8.2.html
- changes/9.0.html
- changes/index.html
- changes.html
- development/builders.html
- development/howtos/builders.html
- development/howtos/index.html
- development/howtos/setup_extension.html
- development/html_themes/index.html
- development/html_themes/templating.html
- development/index.html
- development/overview.html
- development/templating.html
- development/theming.html
- development/tutorials/adding_domain.html
- development/tutorials/autodoc_ext.html
- development/tutorials/examples/README.html
- development/tutorials/extending_build.html
- development/tutorials/extending_syntax.html
- development/tutorials/helloworld.html
- development/tutorials/index.html
- development/tutorials/recipe.html
- development/tutorials/todo.html
- examples.html
- extdev/appapi.html
- extdev/builderapi.html
- extdev/collectorapi.html
- extdev/deprecated.html
- extdev/domainapi.html
- extdev/envapi.html
- extdev/event_callbacks.html
- extdev/eventapi.html
- extdev/i18n.html
- extdev/index.html
- extdev/logging.html
- extdev/markupapi.html
- extdev/nodes.html
- extdev/parserapi.html
- extdev/projectapi.html
- extdev/testing.html
- extdev/utils.html
- faq.html
- genindex.html
- glossary.html
- index.html
- internals/ai-policy.html
- internals/code-of-conduct.html
- internals/contributing.html
- internals/index.html
- internals/organization.html
- internals/release-process.html
- latex.html
- man/index.html
- man/sphinx-apidoc.html
- man/sphinx-autogen.html
- man/sphinx-build.html
- man/sphinx-quickstart.html
- objects.inv
- py-modindex.html
- search.html
- searchindex.js
- support.html
- tutorial/automatic-doc-generation.html
- tutorial/deploying.html
- tutorial/describing-code.html
- tutorial/end.html
- tutorial/first-steps.html
- tutorial/getting-started.html
- tutorial/index.html
- tutorial/more-sphinx-customization.html
- tutorial/narrative-documentation.html
- usage/advanced/intl.html
- usage/advanced/websupport/api.html
- usage/advanced/websupport/index.html
- usage/advanced/websupport/quickstart.html
- usage/advanced/websupport/searchadapters.html
- usage/advanced/websupport/storagebackends.html
- usage/builders/index.html
- usage/configuration.html
- usage/domains/c.html
- usage/domains/cpp.html
- usage/domains/index.html
- usage/domains/javascript.html
- usage/domains/mathematics.html
- usage/domains/python.html
- usage/domains/restructuredtext.html
- usage/domains/standard.html
- usage/extensions/apidoc.html
- usage/extensions/autodoc.html
- usage/extensions/autosectionlabel.html
- usage/extensions/autosummary.html
- usage/extensions/coverage.html
- usage/extensions/doctest.html
- usage/extensions/duration.html
- usage/extensions/example_google.html
- usage/extensions/example_numpy.html
- usage/extensions/extlinks.html
- usage/extensions/githubpages.html
- usage/extensions/graphviz.html
- usage/extensions/ifconfig.html
- usage/extensions/imgconverter.html
- usage/extensions/index.html
- usage/extensions/inheritance.html
- usage/extensions/intersphinx.html
- usage/extensions/linkcode.html
- usage/extensions/math.html
- usage/extensions/napoleon.html
- usage/extensions/todo.html
- usage/extensions/viewcode.html
- usage/index.html
- usage/installation.html
- usage/markdown.html
- usage/quickstart.html
- usage/referencing.html
- usage/restructuredtext/basics.html
- usage/restructuredtext/directives.html
- usage/restructuredtext/domains.html
- usage/restructuredtext/field-lists.html
- usage/restructuredtext/index.html
- usage/restructuredtext/roles.html
- usage/theming.html
