src/sphinxdocrs/tests/snapshots/parity__sphinx_docs_rs_intersphinx_cache_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: rs_sorted
---
- python_objects.inv
- readthedocs_objects.inv
- requests_objects.inv
